; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_start_scan.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_start_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@GHB_STATE_IDLE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"sourcetoolbutton\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"hb-stop\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"Stop Scan\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"source_open\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [18 x i8] c"source_title_open\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"MinTitleDuration\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i32*, i32, i32)* @start_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_scan(%struct.TYPE_7__* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_8__, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = call i32 @ghb_get_status(%struct.TYPE_8__* %10)
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @GHB_STATE_IDLE, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  br label %57

18:                                               ; preds = %4
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32* @GHB_WIDGET(i32 %21, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %22, i32** %9, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @GTK_TOOL_BUTTON(i32* %23)
  %25 = call i32 @gtk_tool_button_set_icon_name(i32 %24, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @GTK_TOOL_BUTTON(i32* %26)
  %28 = call i32 @_(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @gtk_tool_button_set_label(i32 %27, i32 %28)
  %30 = load i32*, i32** %9, align 8
  %31 = call i32 @GTK_TOOL_ITEM(i32* %30)
  %32 = call i32 @_(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %33 = call i32 @gtk_tool_item_set_tooltip_text(i32 %31, i32 %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i32* @GHB_WIDGET(i32 %36, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  store i32* %37, i32** %9, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = load i32, i32* @FALSE, align 4
  %40 = call i32 @gtk_widget_set_sensitive(i32* %38, i32 %39)
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = call i32* @GHB_WIDGET(i32 %43, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0))
  store i32* %44, i32** %9, align 8
  %45 = load i32*, i32** %9, align 8
  %46 = load i32, i32* @FALSE, align 4
  %47 = call i32 @gtk_widget_set_sensitive(i32* %45, i32 %46)
  %48 = load i32*, i32** %6, align 8
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* %8, align 4
  %51 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %52 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  %54 = call i64 @ghb_dict_get_int(i32 %53, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  %55 = mul nsw i64 90000, %54
  %56 = call i32 @ghb_backend_scan(i32* %48, i32 %49, i32 %50, i64 %55)
  br label %57

57:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @ghb_get_status(%struct.TYPE_8__*) #1

declare dso_local i32* @GHB_WIDGET(i32, i8*) #1

declare dso_local i32 @gtk_tool_button_set_icon_name(i32, i8*) #1

declare dso_local i32 @GTK_TOOL_BUTTON(i32*) #1

declare dso_local i32 @gtk_tool_button_set_label(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @gtk_tool_item_set_tooltip_text(i32, i32) #1

declare dso_local i32 @GTK_TOOL_ITEM(i32*) #1

declare dso_local i32 @gtk_widget_set_sensitive(i32*, i32) #1

declare dso_local i32 @ghb_backend_scan(i32*, i32, i32, i64) #1

declare dso_local i64 @ghb_dict_get_int(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
